--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -14,5 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Imprimir Hola Mundo
-        run: echo "Hola Mundo"
+        env: 
+          test: "pablo"
+        run: echo "Hola Mundo $env:test $GITHUB_WORKFLOW"
 
