--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,30 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ./db/init_schema.sql:/docker-entrypoint-initdb.d/init_schema.sql
+      - ./scripts/init_schema.sql:/docker-entrypoint-initdb.d/init_schema.sql
     ports:
       - "6432:5432"
+    networks:
+      - app-network
+    restart: always
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: smartspend-backend
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=${POSTGRES_DB}
+      - PORT=${APISERVER_PORT}
+      - PUBLIC_HOST=0.0.0.0
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
     networks:
       - app-network
     restart: always
