--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ./scripts/init_schema.sql:/docker-entrypoint-initdb.d/init_schema.sql
+      - ./db/migrations/init_schema.sql:/docker-entrypoint-initdb.d/init_schema.sql
     ports:
       - "6432:5432"
     networks:
