--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:17.4
@@ -31,6 +33,8 @@ services:
       - "8080:8080"
     depends_on:
       - db
+    volumes:
+      - .:/app  # Este volumen monta el código fuente en el contenedor
     networks:
       - app-network
     restart: always
